-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.10
-
None
-
299c449d4 (dev)
It seems that Qt Creators codemodel shows the used import paths when hovering over an import (valid or invalid). I think this is quite informative and that qmlls should implement a similar tooltip for valid and invalid imports.
This would also hide the tooltip with invalid imports from QTCREATORBUG-29864 to appear when qmlls is enabled.
- resulted from
-
QTCREATORBUG-29864 Qt Creator adds other projects' QML import paths to the current project
-
- Closed
-
| For Gerrit Dashboard: QTBUG-140915 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 683380,5 | qmlls: print import path information on hover | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |