qmlls: print import path information on hover

This copies the effect that Qt Creator does when hovering on an import,
and avoids invalid QtC codemodel information leaking through when
hovering on the import path.

Fixes: QTBUG-140915
Change-Id: I5e08973fb2d227c735a40d01f6404f4424897272
Reviewed-by: Semih Yavuz <semih.yavuz@qt.io>